2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem-video-thumbnailer.1:
	* data/totem-video-thumbnailer.pod:
	* data/totem.1: Update from master

2009-04-08  Christian Persch  <chpe@gnome.org>

	* src/eggsmclient-xsmp.c: (save_state): Re-sync from libegg master.

============ Version 2.26.1

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.1

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_file_changed):
	Only remove files when the location is about to be umounted,
	or is umounted (Closes: #574097)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp: Fix Rewind()
	and Stop() functions to do what they're supposed to in
	the QuickTime compat plugin (Closes: #544066)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (ensure_shuffled): Patch from
	Pascal Sachs <psachs@student.ethz.ch> to make sure all the items
	are played when a playlist is shuffled but not in repeat mode
	(Closes: #561949)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/thumbnail/totem-thumbnail.c (set_icon_to_default):
	Patch from Philip Withnall <philip@tecnocode.co.uk> to reset the
	icon properly, see bug #573973

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (video_widget_create): Make the default
	drag action be copy (Closes: #574565)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_close): Reset the seekbar to 0 when a file
	is closed (Closes: #577255)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py: Sort the languages
	in the combo box (Closes: #577366)

2009-03-24  Christian Persch  <chpe@gnome.org>

	* src/totem-session.c: (totem_session_restore):
	* src/totem-session.h:
	* src/totem.c: (main): Add smclient options when parsing totem's
	command line. Bug #576620.
